--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DigiKipp – Prototype UI + Golden Logic</title>
+  <title>DigiKipp – 7 Bilder Demo</title>
 
   <style>
     :root{
@@ -36,16 +36,12 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      /* UI-Panel */
       --ui-panel-bg: #4b2e22;
       --ui-panel-border: rgba(0,0,0,0.35);
       --ui-text: #ead7be;
 
       --rotSign: 1;
       --rot: 0deg;
-
-      /* ✅ keine sichtbare Dreh-Animation */
-      --fade-ms: 120ms; /* nur fürs Umschalten W <-> KIP */
     }
 
     html, body { height: 100%; }
@@ -72,7 +68,6 @@
           rgba(255,255,255,0.03) 16px
         ),
         linear-gradient(180deg, #e0b47c, #c89259);
-
       background-attachment: fixed;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
@@ -100,7 +95,6 @@
       padding: 0;
       font-weight: 1000;
       letter-spacing: 0.06em;
-      text-transform: none;
       font-size: clamp(18px, 4.6vmin, 34px);
       color: rgba(0,0,0,0.92);
       text-shadow:
@@ -114,12 +108,9 @@
       height: 0;
       aspect-ratio: 1 / 1;
       box-sizing: border-box;
-
       background: #0b0b0b;
-
       border: var(--board-border) solid var(--board-border-color);
       border-radius: var(--board-radius);
-
       overflow: visible;
 
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
@@ -197,7 +188,7 @@
       pointer-events: none;
     }
 
-    /* ====== Gruppen: Rotation ist SNAP (keine Transition) ====== */
+    /* Gruppen: Rotation ist SNAP, aber ohne Transition */
     .wFaceGroup,
     .kipGroup{
       position:absolute;
@@ -213,23 +204,10 @@
         rotate(var(--rot))
         translate(calc(-1 * var(--pivot-x)), calc(-1 * var(--pivot-y)));
       transform-origin: 0 0;
-      will-change: transform;
-
-      transition: opacity var(--fade-ms) ease;
-      opacity: 1;
-      visibility: visible;
     }
 
-    /* weich ausblenden */
-    .isHidden{
-      opacity: 0;
-    }
-
-    /* ✅ hart unsichtbar (gegen Blinken) */
-    .isGone{
-      opacity: 0 !important;
-      visibility: hidden !important;
-    }
+    /* ✅ KNALLHART (kein opacity) -> kein Blinken möglich */
+    .hidden{ display:none !important; }
 
     .cubeShadow{
       position:absolute;
@@ -317,20 +295,16 @@
 
       transform: rotate(var(--num-rot, 0deg)) translate(var(--opt-x, 0px), var(--opt-y, 0px));
       transform-origin: 50% 50%;
-
       position: relative;
       line-height: 1;
     }
 
-    /* Fly-In (nur Zahl selbst) */
     @keyframes flyIn {
       0%   { transform: translateY(-18px) scale(0.86) rotate(var(--num-rot,0deg)); opacity: 0; filter: blur(0.3px); }
       70%  { transform: translateY(  1px) scale(1.03) rotate(var(--num-rot,0deg)); opacity: 1; filter: blur(0px); }
       100% { transform: translateY(  0px) scale(1.00) rotate(var(--num-rot,0deg)); opacity: 1; }
     }
-    .fly{
-      animation: flyIn 260ms cubic-bezier(.15,.9,.25,1) both;
-    }
+    .fly{ animation: flyIn 260ms cubic-bezier(.15,.9,.25,1) both; }
 
     .slot .num > span[data-val="7"]{ --opt-x: 2px; }
     .slot .num > span.num10{ --opt-x: -2px; }
@@ -360,13 +334,13 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* W1 Vollansicht Slots */
+    /* W Vollansicht Slots */
     .s-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); }
     .s-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); }
     .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
     .s-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* KIP Gruppe (50%) */
+    /* KIP Darstellung */
     .kipScale{
       position:absolute;
       inset:0;
@@ -377,7 +351,6 @@
         scaleX(0.6666667)
         translate(calc(-1 * var(--pivot-x)), calc(-1 * var(--pivot-y)));
       transform-origin: 0 0;
-      will-change: transform;
     }
 
     .kipShadow{
@@ -400,14 +373,8 @@
       width: 6px;
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       transform: translateX(-50%);
-      background:
-        linear-gradient(90deg,
-          rgba(0,0,0,0.00),
-          rgba(0,0,0,0.28),
-          rgba(0,0,0,0.00)
-        );
+      background: linear-gradient(90deg, rgba(0,0,0,0.00), rgba(0,0,0,0.28), rgba(0,0,0,0.00));
       z-index: 1;
-      filter: blur(0.2px);
       opacity: 0.95;
     }
 
@@ -424,7 +391,7 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* UI PANEL */
+    /* UI */
     .uiPanel{
       width: 100%;
       box-sizing: border-box;
@@ -432,7 +399,6 @@
       border-radius: 16px;
       border: 1px solid var(--ui-panel-border);
       background: var(--ui-panel-bg);
-      backdrop-filter: blur(6px);
       box-shadow:
         inset 0 0 0 4px #000,
         0 12px 22px rgba(0,0,0,0.22),
@@ -504,7 +470,6 @@
       font-size: clamp(18px, 8vmin, 36px);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
       line-height: 1;
-      transform: translateY(0px);
     }
 
     .pointsBlock{
@@ -533,63 +498,6 @@
       opacity: 0.92;
       text-shadow: 0 1px 0 rgba(0,0,0,0.25);
       margin-top: 2px;
-    }
-
-    .sliderRow{
-      display:flex;
-      align-items:center;
-      gap: 10px;
-      user-select:none;
-    }
-
-    .icon{
-      width: 26px;
-      height: 26px;
-      flex: 0 0 auto;
-      opacity: 0.92;
-    }
-    .icon svg{
-      width:100%;
-      height:100%;
-      fill: none;
-      stroke: var(--ui-text);
-      stroke-width: 2.2;
-      stroke-linecap: round;
-      stroke-linejoin: round;
-      filter: drop-shadow(0 1px 0 rgba(0,0,0,0.25));
-    }
-
-    input[type="range"]{
-      -webkit-appearance: none;
-      appearance: none;
-      width: 100%;
-      height: 10px;
-      border-radius: 999px;
-      background: #000;
-      outline: none;
-      border: 1px solid #000;
-      box-shadow: 0 0 0 1px rgba(255,255,255,0.18) inset;
-    }
-    input[type="range"]::-webkit-slider-thumb{
-      -webkit-appearance: none;
-      appearance: none;
-      width: 22px;
-      height: 22px;
-      border-radius: 6px;
-      background: var(--btn-bg);
-      border: 2px solid rgba(0,0,0,0.35);
-      box-shadow:
-        0 8px 14px rgba(0,0,0,0.22),
-        0 0 0 1px rgba(255,255,255,0.18) inset;
-      cursor: pointer;
-    }
-    input[type="range"]::-moz-range-thumb{
-      width: 22px;
-      height: 22px;
-      border-radius: 6px;
-      background: var(--btn-bg);
-      border: 2px solid rgba(0,0,0,0.35);
-      cursor: pointer;
     }
 
     .startBtn{
@@ -641,7 +549,7 @@
         <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
       </div>
 
-      <div id="kipGroup" class="kipGroup isHidden" aria-label="KIP Gruppe">
+      <div id="kipGroup" class="kipGroup hidden" aria-label="KIP Gruppe">
         <div class="kipScale">
           <div class="kipShadow" aria-hidden="true"></div>
           <div class="kipEdgeCore" aria-hidden="true"></div>
@@ -665,46 +573,18 @@
     </div>
 
     <div class="uiPanel" aria-label="UI Panel">
-
-      <div class="sliderRow" aria-label="Kippspeed">
-        <div class="icon" aria-hidden="true" title="langsam">
-          <svg viewBox="0 0 24 24">
-            <path d="M4 14c0 2 2 3 4 3h5c4 0 7-2 7-5 0-3-3-5-7-5H9"/>
-            <path d="M9 12h5"/>
-            <path d="M6 17v2"/>
-            <path d="M10 17v2"/>
-            <path d="M16 16v2"/>
-            <path d="M20 12h2"/>
-            <path d="M6 11l-2-1"/>
-          </svg>
-        </div>
-
-        <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
-
-        <div class="icon" aria-hidden="true" title="schnell">
-          <svg viewBox="0 0 24 24">
-            <path d="M6 14c0 3 3 5 7 5 4 0 7-2 7-5 0-2-2-4-5-4H9c-2 0-3 2-3 4Z"/>
-            <path d="M9 10V6c0-2 2-3 3-3"/>
-            <path d="M12 10l2-6"/>
-            <path d="M7 16l-2 2"/>
-            <path d="M17 16l2 2"/>
-            <path d="M14 13h1"/>
-          </svg>
-        </div>
-      </div>
-
       <div class="uiRow">
         <div style="display:flex; align-items:flex-end; gap: 12px;">
           <div class="uiLabel">Kippziel</div>
           <div class="targetCard">
-            <div id="targetSquare" class="targetSquare" aria-label="Ziel (Dummy)"><span>7</span></div>
-            <div id="progressText" class="progressText" aria-label="Progress (Dummy)">(00/11)</div>
+            <div class="targetSquare" aria-label="Ziel (Dummy)"><span>7</span></div>
+            <div class="progressText" aria-label="Progress (Dummy)">(00/11)</div>
           </div>
         </div>
 
         <div class="pointsBlock" aria-label="Punkteblock rechts (Dummy)">
-          <div id="pointsNow" class="pointsNow">0p</div>
-          <div class="hiLine">Highscore: <span id="hiVal">66</span></div>
+          <div class="pointsNow">0p</div>
+          <div class="hiLine">Highscore: <span>66</span></div>
         </div>
       </div>
 
@@ -714,28 +594,17 @@
   </div>
 
   <script>
-    const boardEl   = document.getElementById("board");
-    const grid      = document.getElementById("grid");
-    const wFace     = document.getElementById("wFaceGroup");
-    const kipGroup  = document.getElementById("kipGroup");
-
-    const btnStart    = document.getElementById("btnStart");
-    const speedSlider = document.getElementById("speedSlider");
+    const boardEl  = document.getElementById("board");
+    const grid     = document.getElementById("grid");
+    const wFace    = document.getElementById("wFaceGroup");
+    const kipGroup = document.getElementById("kipGroup");
+    const btnStart = document.getElementById("btnStart");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
-    function raf(){ return new Promise(res => requestAnimationFrame(() => res())); }
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
       boardEl.style.height = w + "px";
-    }
-
-    // Speed -> nur "Anzeigedauer"
-    function getTiming(){
-      const v = Number(speedSlider.value || 3); // 0..9
-      const holdMsFull = Math.round(520 - v * 36); // ~520 .. ~196
-      const holdMsKip  = Math.round(420 - v * 30); // ~420 .. ~150
-      return { holdMsFull, holdMsKip };
     }
 
     const cols = ["A","B","C","D","E","F","G","H"];
@@ -765,13 +634,11 @@
 
     function buildGridOnce(){
       if (grid.dataset.built === "1") return;
-
       for(let r=1; r<=8; r++){
         for(let c=0; c<8; c++){
           const cell = document.createElement("div");
           cell.className = "cell";
           const coord = key(r, cols[c]);
-
           if(colorMap.has(coord)){
             cell.classList.add(colorMap.get(coord));
             cell.classList.add("colorCell");
@@ -849,19 +716,16 @@
       [null,null,null,null],
       [null,null,null,null],
     ];
-
     let sets = [
       [null,null,null,null],
       [null,null,null,null],
       [null,null,null,null],
     ];
-
-    let assigned = [false, false, false];
+    let assigned = [false,false,false];
 
     let rotIndex  = 0;
     let faceIndex = 0;
     const rotDeg = [0, 90, 180, 270];
-    let plannedDir = +1;
 
     const slotTargetsW = [
       wFace.querySelector('[data-slot="S1"] .num > span'),
@@ -895,77 +759,58 @@
       return [f4, f3, f2, f1];
     }
 
-    function applyRotationAndNumbers(animate=false){
+    function setRotationSnap(){
       const deg = rotDeg[rotIndex];
-
-      // Snap: sofortige Endlage (kein Übergang)
       wFace.style.setProperty("--rot", deg + "deg");
       kipGroup.style.setProperty("--rot", deg + "deg");
+    }
 
+    // ✅ Nur W rendern (wenn W sichtbar ist)
+    function renderW(animate=false){
+      setRotationSnap();
       const curr = sets[faceIndex];
-
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsW[i], curr[i], animate);
-        if(curr[i] !== null && curr[i] !== undefined) setDot(slotTargetsW[i], curr[i]);
+        if(curr[i] != null) setDot(slotTargetsW[i], curr[i]);
         else slotTargetsW[i].classList.remove("dot");
       }
+    }
 
-      const nextFaceIndex = (plannedDir === +1)
-        ? (faceIndex + 1) % 3
-        : (faceIndex + 2) % 3;
-
+    // ✅ Nur KIP rendern (wenn KIP sichtbar ist)
+    function renderKip(){
+      setRotationSnap();
+      const curr = sets[faceIndex];
+      const nextFaceIndex = (faceIndex + 1) % 3;
       const next = sets[nextFaceIndex];
 
+      // rechts: aktuelle (die “wegkippt”)
       for(let i=0;i<4;i++){
-        renderNumber(slotTargetsKipRight[i], curr[i], animate);
-        if(curr[i] !== null && curr[i] !== undefined) setDot(slotTargetsKipRight[i], curr[i]);
+        renderNumber(slotTargetsKipRight[i], curr[i], false);
+        if(curr[i] != null) setDot(slotTargetsKipRight[i], curr[i]);
         else slotTargetsKipRight[i].classList.remove("dot");
       }
 
-      const nextForPreview = (plannedDir === +1) ? mapHiddenToVisible_CW(next) : next;
-
+      // links: nächste (die “auftaucht”)
+      const nextPreview = mapHiddenToVisible_CW(next);
       for(let i=0;i<4;i++){
-        renderNumber(slotTargetsKipLeft[i], nextForPreview[i], animate);
-        if(nextForPreview[i] !== null && nextForPreview[i] !== undefined) setDot(slotTargetsKipLeft[i], nextForPreview[i]);
+        renderNumber(slotTargetsKipLeft[i], nextPreview[i], false);
+        if(nextPreview[i] != null) setDot(slotTargetsKipLeft[i], nextPreview[i]);
         else slotTargetsKipLeft[i].classList.remove("dot");
       }
     }
 
-    // ===== Sichtbarkeit: soft & hard (gegen Blinken) =====
-    function softShow(mode){
-      // mode: "W" oder "K"
-      if(mode === "W"){
-        kipGroup.classList.add("isHidden");
-        wFace.classList.remove("isHidden");
-      }else{
-        wFace.classList.add("isHidden");
-        kipGroup.classList.remove("isHidden");
-      }
+    function showW(){
+      kipGroup.classList.add("hidden");
+      wFace.classList.remove("hidden");
     }
 
-    async function hardSwap(mode, doUpdateFn){
-      // 1) hart weg (beide)
-      wFace.classList.add("isGone");
-      kipGroup.classList.add("isGone");
-      await raf();
-
-      // 2) im Unsichtbaren updaten
-      if(typeof doUpdateFn === "function") doUpdateFn();
-
-      await raf();
-
-      // 3) gewünschte Gruppe sichtbar machen (soft)
-      wFace.classList.remove("isGone");
-      kipGroup.classList.remove("isGone");
-      await raf();
-
-      softShow(mode);
+    function showKip(){
+      wFace.classList.add("hidden");
+      kipGroup.classList.remove("hidden");
     }
 
-    // ===== Reset / Neu mischen =====
     function reroll12_keepEmpty(){
       const twelve = getUniqueRandomNumbers(12, 1, 12);
-
       planned[0] = twelve.slice(0,4);
       planned[1] = twelve.slice(4,8);
       planned[2] = twelve.slice(8,12);
@@ -979,89 +824,80 @@
 
       rotIndex  = 0;
       faceIndex = 0;
-      plannedDir = +1;
 
-      [...slotTargetsW, ...slotTargetsKipRight, ...slotTargetsKipLeft].forEach(s => clearSpan(s));
+      [...slotTargetsW, ...slotTargetsKipRight, ...slotTargetsKipLeft].forEach(clearSpan);
+      setRotationSnap();
     }
 
-    // ===== Ein Vollschritt CW (nur Endlage setzen) =====
-    function advanceFullCW(){
-      plannedDir = +1;
+    function advanceFullCW_andAssign(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
       ensureAssigned(faceIndex);
-      applyRotationAndNumbers(true);
     }
 
-    // ====== DEMO: genau 7 Zustände W1,KIP,W2,KIP,W3,KIP,W1 ======
+    // ====== DIE SHOW: 7 Bilder (fix 3 Sekunden) ======
     let running = false;
+    const STEP_MS = 3000;
 
-    async function runDemo7States(){
+    async function runShow7(){
       if(running) return;
       running = true;
       btnStart.disabled = true;
 
-      const { holdMsFull, holdMsKip } = getTiming();
-
-      // Neu mischen, leer starten
       reroll12_keepEmpty();
 
-      // Zustand 1: W1 (leer) – ohne Blinken
-      await hardSwap("W", () => {
-        applyRotationAndNumbers(false);
-      });
+      // 1) W1 leer (kurz, damit man es sieht)
+      showW();
+      renderW(false);
+      await sleep(STEP_MS);
 
-      // Zustand 1b: W1 wird bestückt (Fly-In)
+      // 2) W1 bestückt
       ensureAssigned(0);
-      await hardSwap("W", () => {
-        applyRotationAndNumbers(true);
-      });
-      await sleep(holdMsFull);
+      renderW(true);
+      await sleep(STEP_MS);
 
-      // Zustand 2: KIP zwischen W1 -> W2
-      await hardSwap("K", () => {
-        // nur Anzeige wechseln, keine neue Logik
-        applyRotationAndNumbers(false);
-      });
-      await sleep(holdMsKip);
+      // 3) KIP W1->W2 (W2 muss fürs Bild existieren!)
+      ensureAssigned(1);
+      showKip();
+      renderKip();
+      await sleep(STEP_MS);
 
-      // Zustand 3: W2 Voll
-      await hardSwap("W", () => {
-        advanceFullCW();
-      });
-      await sleep(holdMsFull);
+      // 4) W2 bestückt
+      advanceFullCW_andAssign(); // jetzt ist faceIndex=1
+      showW();
+      renderW(true);
+      await sleep(STEP_MS);
 
-      // Zustand 4: KIP zwischen W2 -> W3
-      await hardSwap("K", () => {
-        applyRotationAndNumbers(false);
-      });
-      await sleep(holdMsKip);
+      // 5) KIP W2->W3
+      ensureAssigned(2);
+      showKip();
+      renderKip();
+      await sleep(STEP_MS);
 
-      // Zustand 5: W3 Voll
-      await hardSwap("W", () => {
-        advanceFullCW();
-      });
-      await sleep(holdMsFull);
+      // 6) W3 bestückt
+      advanceFullCW_andAssign(); // faceIndex=2
+      showW();
+      renderW(true);
+      await sleep(STEP_MS);
 
-      // Zustand 6: KIP zwischen W3 -> W1
-      await hardSwap("K", () => {
-        applyRotationAndNumbers(false);
-      });
-      await sleep(holdMsKip);
+      // 7) KIP W3->W1 (W1 existiert schon)
+      showKip();
+      renderKip();
+      await sleep(STEP_MS);
 
-      // Zustand 7: W1 Voll (Zyklus Ende)
-      await hardSwap("W", () => {
-        advanceFullCW();
-      });
+      // Ende: W1 wieder oben
+      advanceFullCW_andAssign(); // faceIndex=0
+      showW();
+      renderW(true);
 
       btnStart.textContent = "ZAHLEN NEU SETZEN";
       btnStart.disabled = false;
       running = false;
     }
 
-    btnStart.addEventListener("click", () => runDemo7States());
+    btnStart.addEventListener("click", runShow7);
 
-    window.addEventListener("load", async () => {
+    window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
       setTimeout(setBoardSquare, 80);
@@ -1069,9 +905,8 @@
       buildGridOnce();
 
       reroll12_keepEmpty();
-
-      // sauberer Start ohne irgendein Blink
-      await hardSwap("W", () => applyRotationAndNumbers(false));
+      showW();
+      renderW(false);
     });
 
     window.addEventListener("resize", () => {
