--- a/index.html
+++ b/index.html
@@ -764,20 +764,17 @@
       }
     }
 
-    // ✅ FIX: Linke KIP-Seite NUR anzeigen, wenn die nächste Fläche bereits assigned/bestückt ist.
     function renderKip(){
       setRotationSnap();
       const curr = sets[faceIndex];
       const nextFaceIndex = (faceIndex + 1) % 3;
 
-      // rechts: aktuelle (die “wegkippt”) -> darf Zahlen haben, wenn sie hat
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipRight[i], curr[i], false);
         if(curr[i] != null) setDot(slotTargetsKipRight[i], curr[i]);
         else slotTargetsKipRight[i].classList.remove("dot");
       }
 
-      // links: nächste (die “auftaucht”) -> nur wenn assigned, sonst LEER
       let nextPreview;
       if(assigned[nextFaceIndex]){
         nextPreview = mapHiddenToVisible_CW(sets[nextFaceIndex]);
@@ -822,15 +819,16 @@
       setRotationSnap();
     }
 
-    function advanceFullCW_andAssign(){
+    // ✅ NEU: nur weiterdrehen / face wechseln (OHNE assign)
+    function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
-      ensureAssigned(faceIndex);
     }
 
-    // ====== DIE SHOW: 7 Bilder (fix 3 Sekunden) ======
+    // ====== DIE SHOW: 7 Bilder (fix 3 Sekunden, W-Flächen 50/50) ======
     let running = false;
     const STEP_MS = 3000;
+    const HALF_MS = STEP_MS / 2; // 1500
 
     async function runShow7(){
       if(running) return;
@@ -839,45 +837,52 @@
 
       reroll12_keepEmpty();
 
-      // 1) W1 leer
+      // W1: 1,5s leer + 1,5s bestückt
       showW();
       renderW(false);
-      await sleep(STEP_MS);
+      await sleep(HALF_MS);
 
-      // 2) W1 bestückt
       ensureAssigned(0);
       renderW(true);
-      await sleep(STEP_MS);
+      await sleep(HALF_MS);
 
-      // 3) KIP W1->W2 (W2 ist NOCH NICHT bestückt => muss leer sein)
+      // KIP W1->W2 (W2 noch leer)
       showKip();
       renderKip();
       await sleep(STEP_MS);
 
-      // 4) W2 bestückt
-      advanceFullCW_andAssign(); // faceIndex=1 + assigned(1)
+      // W2: zuerst leer anzeigen, dann in der zweiten Hälfte bestücken
+      advanceFullCW(); // faceIndex=1
       showW();
-      renderW(true);
-      await sleep(STEP_MS);
+      renderW(false);
+      await sleep(HALF_MS);
 
-      // 5) KIP W2->W3 (W3 NOCH NICHT bestückt => leer)
+      ensureAssigned(faceIndex); // assigned(1)
+      renderW(true);
+      await sleep(HALF_MS);
+
+      // KIP W2->W3 (W3 noch leer)
       showKip();
       renderKip();
       await sleep(STEP_MS);
 
-      // 6) W3 bestückt
-      advanceFullCW_andAssign(); // faceIndex=2 + assigned(2)
+      // W3: 50/50
+      advanceFullCW(); // faceIndex=2
       showW();
-      renderW(true);
-      await sleep(STEP_MS);
+      renderW(false);
+      await sleep(HALF_MS);
 
-      // 7) KIP W3->W1 (W1 existiert schon => links darf Zahlen zeigen)
+      ensureAssigned(faceIndex); // assigned(2)
+      renderW(true);
+      await sleep(HALF_MS);
+
+      // KIP W3->W1 (W1 existiert)
       showKip();
       renderKip();
       await sleep(STEP_MS);
 
-      // Ende: W1 wieder oben
-      advanceFullCW_andAssign(); // faceIndex=0
+      // Ende: W1 oben, bestückt
+      advanceFullCW(); // faceIndex=0
       showW();
       renderW(true);
 
