--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DigiKipp – 7 Bilder Demo</title>
+  <title>DigiKipp – 7 Bilder Demo + Kippspeed</title>
 
   <style>
     :root{
@@ -188,6 +188,7 @@
       pointer-events: none;
     }
 
+    /* Gruppen: Rotation SNAP */
     .wFaceGroup,
     .kipGroup{
       position:absolute;
@@ -205,6 +206,7 @@
       transform-origin: 0 0;
     }
 
+    /* hartes Umschalten */
     .hidden{ display:none !important; }
 
     .cubeShadow{
@@ -254,12 +256,16 @@
       width: var(--cell);
       height: var(--cell);
       box-sizing: border-box;
+
       background:
         linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.05)),
         var(--slot-fill);
+
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
+
       z-index: 7;
+
       box-shadow:
         1px 1px 0 rgba(255,255,255,0.18) inset,
         -1px -1px 0 rgba(0,0,0,0.08) inset,
@@ -326,11 +332,13 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
+    /* W Vollansicht Slots */
     .s-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); }
     .s-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); }
     .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
     .s-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); }
 
+    /* KIP Darstellung */
     .kipScale{
       position:absolute;
       inset:0;
@@ -381,6 +389,81 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
+    /* Kippspeed Block (zwischen Board und Panel) */
+    .speedBlock{
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px 12px 6px;
+      border-radius: 16px;
+      border: 1px solid rgba(0,0,0,0.25);
+      background: rgba(255,255,255,0.18);
+      backdrop-filter: blur(4px);
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.16),
+        0 0 0 1px rgba(255,255,255,0.18) inset;
+    }
+
+    .speedTitle{
+      font-weight: 1000;
+      letter-spacing: 0.04em;
+      color: rgba(0,0,0,0.90);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+      font-size: 18px;
+      margin: 0 0 8px 0;
+      text-align: left;
+      user-select:none;
+    }
+
+    .sliderRow{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+      user-select:none;
+    }
+
+    .pico{
+      width: 34px;
+      height: 34px;
+      flex: 0 0 auto;
+      display:block;
+      filter: drop-shadow(0 1px 0 rgba(255,255,255,0.35)) drop-shadow(0 2px 6px rgba(0,0,0,0.22));
+      opacity: 0.95;
+    }
+
+    input[type="range"]{
+      -webkit-appearance: none;
+      appearance: none;
+      width: 100%;
+      height: 10px;
+      border-radius: 999px;
+      background: rgba(0,0,0,0.92);
+      outline: none;
+      border: 1px solid rgba(0,0,0,0.65);
+      box-shadow: 0 0 0 1px rgba(255,255,255,0.20) inset;
+    }
+    input[type="range"]::-webkit-slider-thumb{
+      -webkit-appearance: none;
+      appearance: none;
+      width: 22px;
+      height: 22px;
+      border-radius: 6px;
+      background: var(--btn-bg);
+      border: 2px solid rgba(0,0,0,0.35);
+      box-shadow:
+        0 8px 14px rgba(0,0,0,0.22),
+        0 0 0 1px rgba(255,255,255,0.18) inset;
+      cursor: pointer;
+    }
+    input[type="range"]::-moz-range-thumb{
+      width: 22px;
+      height: 22px;
+      border-radius: 6px;
+      background: var(--btn-bg);
+      border: 2px solid rgba(0,0,0,0.35);
+      cursor: pointer;
+    }
+
+    /* UI Panel */
     .uiPanel{
       width: 100%;
       box-sizing: border-box;
@@ -561,6 +644,16 @@
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
+    <!-- Kippspeed: Überschrift links, Slider mit Schnecke/Hase -->
+    <div class="speedBlock" aria-label="Kippspeed Block">
+      <div class="speedTitle">Kippspeed</div>
+      <div class="sliderRow">
+        <img class="pico" src="kippspeed_snail.png" alt="langsam (Schnecke)">
+        <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Kippspeed Regler">
+        <img class="pico" src="kippspeed_hase.png" alt="schnell (Hase)">
+      </div>
+    </div>
+
     <div class="uiPanel" aria-label="UI Panel">
       <div class="uiRow">
         <div style="display:flex; align-items:flex-end; gap: 12px;">
@@ -583,17 +676,28 @@
   </div>
 
   <script>
-    const boardEl  = document.getElementById("board");
-    const grid     = document.getElementById("grid");
-    const wFace    = document.getElementById("wFaceGroup");
-    const kipGroup = document.getElementById("kipGroup");
-    const btnStart = document.getElementById("btnStart");
+    const boardEl    = document.getElementById("board");
+    const grid       = document.getElementById("grid");
+    const wFace      = document.getElementById("wFaceGroup");
+    const kipGroup   = document.getElementById("kipGroup");
+    const btnStart   = document.getElementById("btnStart");
+    const speedSlider = document.getElementById("speedSlider");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
       boardEl.style.height = w + "px";
+    }
+
+    // Kippspeed -> Zeiten
+    // v=0 langsam ... v=9 schnell
+    function getTiming(){
+      const v = Number(speedSlider.value || 3);
+      const fullMs = Math.round(3600 - v * 250); // 3600 .. 1350
+      const kipMs  = Math.round(3000 - v * 200); // 3000 .. 1200
+      const fullHalf = Math.max(200, Math.round(fullMs / 2));
+      return { fullMs, kipMs, fullHalf };
     }
 
     const cols = ["A","B","C","D","E","F","G","H"];
@@ -699,7 +803,7 @@
       return pool.slice(0, count);
     }
 
-    // ====== GOLDENE LOGIK ======
+    // ====== GOLDENE LOGIK (3 Flächen) ======
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -743,6 +847,7 @@
       assigned[idx] = true;
     }
 
+    // wie bisher: “hidden->visible” Mapping CW
     function mapHiddenToVisible_CW(face){
       const [f1,f2,f3,f4] = face;
       return [f4, f3, f2, f1];
@@ -768,20 +873,17 @@
       setRotationSnap();
       const curr = sets[faceIndex];
       const nextFaceIndex = (faceIndex + 1) % 3;
+      const next = sets[nextFaceIndex];
 
+      // rechts: aktuelle
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipRight[i], curr[i], false);
         if(curr[i] != null) setDot(slotTargetsKipRight[i], curr[i]);
         else slotTargetsKipRight[i].classList.remove("dot");
       }
 
-      let nextPreview;
-      if(assigned[nextFaceIndex]){
-        nextPreview = mapHiddenToVisible_CW(sets[nextFaceIndex]);
-      } else {
-        nextPreview = [null,null,null,null];
-      }
-
+      // links: nächste
+      const nextPreview = mapHiddenToVisible_CW(next);
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipLeft[i], nextPreview[i], false);
         if(nextPreview[i] != null) setDot(slotTargetsKipLeft[i], nextPreview[i]);
@@ -819,16 +921,28 @@
       setRotationSnap();
     }
 
-    // ✅ NEU: nur weiterdrehen / face wechseln (OHNE assign)
     function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
     }
 
-    // ====== DIE SHOW: 7 Bilder (fix 3 Sekunden, W-Flächen 50/50) ======
+    // ====== DIE SHOW: 7 Bilder, mit Halb/Halb Bestückung ======
     let running = false;
-    const STEP_MS = 3000;
-    const HALF_MS = STEP_MS / 2; // 1500
+
+    async function showFaceHalfHalf(faceIdx){
+      // faceIndex muss schon korrekt sein
+      showW();
+
+      // 1) leer
+      renderW(false);
+      const { fullHalf } = getTiming();
+      await sleep(fullHalf);
+
+      // 2) bestücken + Fly-In
+      ensureAssigned(faceIdx);
+      renderW(true);
+      await sleep(fullHalf);
+    }
 
     async function runShow7(){
       if(running) return;
@@ -837,54 +951,36 @@
 
       reroll12_keepEmpty();
 
-      // W1: 1,5s leer + 1,5s bestückt
-      showW();
-      renderW(false);
-      await sleep(HALF_MS);
+      // W1: 1/2 leer, 1/2 bestückt
+      await showFaceHalfHalf(0);
 
-      ensureAssigned(0);
-      renderW(true);
-      await sleep(HALF_MS);
-
-      // KIP W1->W2 (W2 noch leer)
+      // KIP W1->W2: W2 soll hier leer auftauchen (also noch NICHT assignen)
       showKip();
       renderKip();
-      await sleep(STEP_MS);
+      await sleep(getTiming().kipMs);
 
-      // W2: zuerst leer anzeigen, dann in der zweiten Hälfte bestücken
-      advanceFullCW(); // faceIndex=1
-      showW();
-      renderW(false);
-      await sleep(HALF_MS);
+      // W2: zuerst leer, dann bestücken
+      advanceFullCW(); // jetzt faceIndex=1
+      await showFaceHalfHalf(1);
 
-      ensureAssigned(faceIndex); // assigned(1)
-      renderW(true);
-      await sleep(HALF_MS);
-
-      // KIP W2->W3 (W3 noch leer)
+      // KIP W2->W3 (W3 leer)
       showKip();
       renderKip();
-      await sleep(STEP_MS);
+      await sleep(getTiming().kipMs);
 
-      // W3: 50/50
+      // W3: zuerst leer, dann bestücken
       advanceFullCW(); // faceIndex=2
-      showW();
-      renderW(false);
-      await sleep(HALF_MS);
+      await showFaceHalfHalf(2);
 
-      ensureAssigned(faceIndex); // assigned(2)
-      renderW(true);
-      await sleep(HALF_MS);
-
-      // KIP W3->W1 (W1 existiert)
+      // KIP W3->W1 (W1 ist schon bestückt -> beide Seiten bestückt, wie gewünscht)
       showKip();
       renderKip();
-      await sleep(STEP_MS);
+      await sleep(getTiming().kipMs);
 
-      // Ende: W1 oben, bestückt
+      // Ende: W1 oben (nur anzeigen, keine Wartepflicht)
       advanceFullCW(); // faceIndex=0
       showW();
-      renderW(true);
+      renderW(false);
 
       btnStart.textContent = "ZAHLEN NEU SETZEN";
       btnStart.disabled = false;
